// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Dropdown /> Backwards compatibility renders menu items as elements 1`] = `
<div
  className="dropdown"
>
  <button
    aria-expanded={false}
    aria-haspopup={true}
    className="dropdown-toggle btn btn-light"
    id="pgn__dropdown-trigger-6"
    onClick={[Function]}
    type="button"
  >
    Search Engines
  </button>
  <div
    aria-hidden={true}
    aria-labelledby="pgn__dropdown-trigger-6"
    className="dropdown-menu"
    onKeyDown={[Function]}
    role="menu"
  >
    <a
      className="dropdown-item"
      href="http://www.google.com"
    >
      Google
    </a>
    <a
      className="dropdown-item"
      href="http://www.duckduckgo.com"
    >
      DuckDuckGo
    </a>
    <a
      className="dropdown-item"
      href="http://www.yahoo.com"
    >
      Yahoo
    </a>
  </div>
</div>
`;

exports[`<Dropdown /> Backwards compatibility renders the basic usage 1`] = `
<div
  className="dropdown"
>
  <button
    aria-expanded={false}
    aria-haspopup={true}
    className="dropdown-toggle btn btn-light"
    id="pgn__dropdown-trigger-5"
    onClick={[Function]}
    type="button"
  >
    Search Engines
  </button>
  <div
    aria-hidden={true}
    aria-labelledby="pgn__dropdown-trigger-5"
    className="dropdown-menu"
    onKeyDown={[Function]}
    role="menu"
  >
    <a
      className="dropdown-item"
      href="https://google.com"
    >
      Google
    </a>
    <a
      className="dropdown-item"
      href="https://duckduckgo.com"
    >
      DuckDuckGo
    </a>
    <a
      className="dropdown-item"
      href="https://yahoo.com"
    >
      Yahoo
    </a>
  </div>
</div>
`;

exports[`<Dropdown /> Backwards compatibility renders with icon element 1`] = `
<div
  className="dropdown"
>
  <button
    aria-expanded={false}
    aria-haspopup={true}
    className="dropdown-toggle btn btn-light"
    id="pgn__dropdown-trigger-7"
    onClick={[Function]}
    type="button"
  >
    <span
      aria-hidden={true}
      className="fa fa-user px-3"
      id="Icon1"
    />
    Search Engines
  </button>
  <div
    aria-hidden={true}
    aria-labelledby="pgn__dropdown-trigger-7"
    className="dropdown-menu"
    onKeyDown={[Function]}
    role="menu"
  >
    <a
      className="dropdown-item"
      href="https://google.com"
    >
      Google
    </a>
    <a
      className="dropdown-item"
      href="https://duckduckgo.com"
    >
      DuckDuckGo
    </a>
    <a
      className="dropdown-item"
      href="https://yahoo.com"
    >
      Yahoo
    </a>
  </div>
</div>
`;

exports[`<Dropdown /> Rendering renders the happy path 1`] = `
<div
  className="dropdown"
>
  <button
    aria-expanded={false}
    aria-haspopup={true}
    className="dropdown-toggle btn btn-light"
    id="pgn__dropdown-trigger-2"
    onClick={[Function]}
    type="button"
  >
    Search Engines
  </button>
  <div
    aria-hidden={true}
    aria-labelledby="pgn__dropdown-trigger-2"
    className="dropdown-menu"
    onKeyDown={[Function]}
    role="menu"
  >
    <a
      className="dropdown-item"
      href="https://google.com"
    >
      Google
    </a>
    <a
      className="dropdown-item"
      href="https://duckduckgo.com"
    >
      DuckDuckGo
    </a>
    <a
      className="dropdown-item"
      href="https://yahoo.com"
    >
      Yahoo
    </a>
  </div>
</div>
`;

exports[`<Dropdown /> Rendering renders when there is html content in the trigger button 1`] = `
<div
  className="dropdown"
>
  <button
    aria-expanded={false}
    aria-haspopup={true}
    className="dropdown-toggle btn btn-light"
    id="pgn__dropdown-trigger-3"
    onClick={[Function]}
    type="button"
  >
    Search Engines
  </button>
  <div
    aria-hidden={true}
    aria-labelledby="pgn__dropdown-trigger-3"
    className="dropdown-menu"
    onKeyDown={[Function]}
    role="menu"
  >
    <a
      className="dropdown-item"
      href="https://google.com"
    >
      Google
    </a>
    <a
      className="dropdown-item"
      href="https://duckduckgo.com"
    >
      DuckDuckGo
    </a>
    <a
      className="dropdown-item"
      href="https://yahoo.com"
    >
      Yahoo
    </a>
  </div>
</div>
`;

exports[`<Dropdown /> Rendering renders with custom menu content 1`] = `
<div
  className="dropdown"
>
  Custom Content
</div>
`;
